--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,25 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.firstmaven</groupId>
-  <artifactId>web</artifactId>
+  <artifactId>web</artifactId> 
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>web Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+    <properties>
+        <!-- spring版本号 -->
+        <spring.version>5.0.4.RELEASE</spring.version>
+        <!-- mysql版本号 -->
+        <mysql.version>5.1.45</mysql.version>
+        <!-- commons-dbcp版本 -->
+        <dbcp.version>2.2.0</dbcp.version>
+        <!--  -->
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
+        <!-- mybatis版本号 -->
+        <mybatis.version>3.4.2</mybatis.version>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -17,8 +31,48 @@
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
-    	<version>4.3.14.RELEASE</version>
+    	<version>${spring.version}</version>
     </dependency>
+    <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>${spring.version}</version>
+    </dependency>
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>${mysql.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-dbcp2</artifactId>
+	    <version>${dbcp.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>${mybatis.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>${mybatis-spring.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>web</finalName>
@@ -26,7 +80,7 @@
     <plugin>
     	<groupId>org.apache.maven.plugins</groupId>
     	<artifactId>maven-war-plugin</artifactId>
-    	<version>3.2.0</version>
+    	<version>3.2.0</version> 
     </plugin>
     </plugins>
   </build>
