--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,15 @@
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.4.2</mybatis.version>
+        <!-- shiro版本号 -->
+        <shiro.version>1.4.0</shiro.version>
   </properties>
   
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.12</version>
     </dependency>
     <dependency>
     	<groupId>org.springframework</groupId>
@@ -73,6 +74,49 @@
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-engine</artifactId>
+	    <version>5.0.0-M1</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+    <groupId>org.junit.vintage</groupId>
+    <artifactId>junit-vintage-engine</artifactId>
+    <version>5.1.0</version>
+    <scope>test</scope>
+</dependency>
+
+		<dependency>  
+	    <groupId>org.apache.shiro</groupId>  
+	    <artifactId>shiro-core</artifactId>  
+	    <version>${shiro.version}</version>  
+	</dependency>  
+	<dependency>  
+	    <groupId>org.apache.shiro</groupId>  
+	    <artifactId>shiro-web</artifactId>  
+	    <version>${shiro.version}</version>  
+	</dependency>  
+	<dependency>  
+	    <groupId>org.apache.shiro</groupId>  
+	    <artifactId>shiro-ehcache</artifactId>  
+	    <version>${shiro.version}</version>  
+	</dependency>  
+	<dependency>  
+	    <groupId>org.apache.shiro</groupId>  
+	    <artifactId>shiro-spring</artifactId>  
+	    <version>${shiro.version}</version>  
+	</dependency>  
   </dependencies>
   <build>
     <finalName>web</finalName>
