--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,23 @@
 	    <artifactId>shiro-spring</artifactId>  
 	    <version>${shiro.version}</version>  
 	</dependency>  
+	
+	     <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.10.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.10.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-web</artifactId>
+      <version>2.9.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web</finalName>
