--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mybatis.version>3.4.2</mybatis.version>
         <!-- shiro版本号 -->
         <shiro.version>1.4.0</shiro.version>
+        <jackson.version>2.9.4</jackson.version>
   </properties>
   
   <dependencies>
@@ -134,6 +135,17 @@
       <artifactId>log4j-web</artifactId>
       <version>2.9.1</version>
     </dependency>
+    
+      <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web</finalName>
@@ -141,7 +153,7 @@
     <plugin>
     	<groupId>org.apache.maven.plugins</groupId>
     	<artifactId>maven-war-plugin</artifactId>
-    	<version>3.2.0</version> 
+    	<version>3.0.0</version> 
     </plugin>
     </plugins>
   </build>
