--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,8 +28,18 @@
 <!--   Log4jConfigListener会去读取配置文件;开一条watchdog线程每60秒扫描一下配置文件的变化（
   这样在web服务启动后再去修改配置文件也不用重新启动web服务了）;
   并把 web目录的路径压入一个叫webapp.root的系统变量（webapp.root将在log4j.properties文件中使用）。 -->
-    
-
+   
+   
+   <!-- 跨域filter -->
+	<filter>
+	    <filter-name>cors</filter-name>
+	    <filter-class>com.web.filter.CORSFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>cors</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
 
    
   <servlet>
