--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,6 +2,6 @@ jdbc.class=org.springframework.jdbc.datasource.DriverManagerDataSource
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/weibo?characterEncoding=utf8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 jdbc.maxActive=50
 jdbc.maxIdle=5;
